--- a/testing.ipynb
+++ b/testing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,18 +85,12 @@
     }
    ],
    "source": [
-    "pm._get_paid((1/12))\n",
-    "pm._get_paid((2/12))\n",
-    "pm._get_paid((3/12))\n",
-    "pm._get_paid((4/12))\n",
-    "pm._get_paid((1/12))\n",
-    "pm._get_paid((2/12))\n",
-    "pm._get_paid((3/12))\n",
-    "pm._get_paid((4/12))\n",
-    "pm._get_paid((1/12))\n",
-    "pm._get_paid((2/12))\n",
-    "pm._get_paid((3/12))\n",
-    "pm._get_paid((4/12))"
+    "a = Asset(\n",
+    "    name=\"a1\",\n",
+    "    value=150000,\n",
+    "    growth_rate=0.038,\n",
+    "    dividend_rate=0.01\n",
+    ")"
    ]
   },
   {
@@ -143,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
