working through bugs in portfolio manager. weirdness happening with income...

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,60 +57,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Total Income</th>\n",
+       "      <th>Retirement Savings</th>\n",
+       "      <th>Giving Savings</th>\n",
+       "      <th>Asset Savings</th>\n",
+       "      <th>years_from_start</th>\n",
+       "      <th>Total Giving</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100000</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>39396</td>\n",
+       "      <td>4150</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Salary  Total Income  Retirement Savings  Giving Savings  Asset Savings  \\\n",
+       "0  100000        100000               39396            4150              0   \n",
+       "\n",
+       "   years_from_start  Total Giving  \n",
+       "0                 0             0  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pm = PortfolioManager(\n",
     "    spendstrat=spendstrat,\n",
     "    genstrat=genstrat,\n",
     "    salary=salary,\n",
-    ")"
+    ")\n",
+    "\n",
+    "pm.init_retirement_savings(9450+2241+27705) # 12/23/23\n",
+    "pm.init_giving_savings(4150)# 12/23/23\n",
+    "pm.df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7333.3304"
-      ]
-     },
-     "execution_count": 154,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a = Asset(\n",
-    "    name=\"a1\",\n",
-    "    value=150000,\n",
-    "    growth_rate=0.038,\n",
-    "    dividend_rate=0.01\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1: 999.9996, 2: 999.9996, 3: 999.9996, 4: 999.9996}"
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pm.taxes_ytd_ia"
+    "for i in range(11 * 1):\n",
+    "    years_from_start = i+1 / 12\n",
+    "    print(years_from_start)\n",
+    "    pm.simulate_month(years_from_start)"
    ]
   },
   {
