--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,25 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from classes import *"
+    "from classes import *\n",
+    "import itertools\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scratch Work"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "salary = Salary(100000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,69 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Salary</th>\n",
-       "      <th>Total Income</th>\n",
-       "      <th>Retirement Savings</th>\n",
-       "      <th>Giving Savings</th>\n",
-       "      <th>Asset Savings</th>\n",
-       "      <th>years_from_start</th>\n",
-       "      <th>Total Giving</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>100000</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>39396</td>\n",
-       "      <td>4150</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Salary  Total Income  Retirement Savings  Giving Savings  Asset Savings  \\\n",
-       "0  100000        100000               39396            4150              0   \n",
-       "\n",
-       "   years_from_start  Total Giving  \n",
-       "0                 0             0  "
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "salary = Salary(112000)\n",
     "pm = PortfolioManager(\n",
+    "    person_age=28,\n",
     "    spendstrat=spendstrat,\n",
     "    genstrat=genstrat,\n",
     "    salary=salary,\n",
@@ -132,19 +77,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(12 * 3):\n",
-    "    years_from_start = (i) / 12\n",
+    "for i in range(12 * (65-28)):\n",
+    "    years_from_start = (i+1) / 12\n",
     "    pm.simulate_month(years_from_start)\n",
-    "pm.df"
+    "print(pm.df[\"Total Giving\"].sum())\n",
+    "display(pm.df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spendstrat_params = {\n",
+    "    \"base_spending\": [0.5],\n",
+    "    \"retirement_saving\": [0.15],\n",
+    "    \"disp_spend\": [0.15],\n",
+    "    \"disp_give\": [0.1, 0.3, 0.4, 0.5]\n",
+    "}\n",
+    "\n",
+    "genstrat_params = {\n",
+    "    \"straight_percent\": [0.1, 0.3, 0.5, 0.7, 0.9],\n",
+    "    \"investment_draw_down_rate\": [0.01, 0.015, 0.02, 0.025, 0.03],\n",
+    "    \"legacy_give_percent\": [0.2]\n",
+    "}\n",
+    "\n",
+    "analysis_df = pd.DataFrame(columns=[\n",
+    "    \"base_spending\",\n",
+    "    \"retirement_saving\",\n",
+    "    \"disp_spend\",\n",
+    "    \"disp_give\",\n",
+    "    \"straight_percent\",\n",
+    "    \"investment_draw_down_rate\",\n",
+    "    \"legacy_give_percent\",\n",
+    "    \"total_giving\"\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "genstrats analyzed: 100%|██████████| 20/20 [00:49<00:00,  2.46s/it]\n",
+      "genstrats analyzed: 100%|██████████| 20/20 [00:49<00:00,  2.48s/it]\n",
+      "genstrats analyzed: 100%|██████████| 20/20 [00:49<00:00,  2.46s/it]\n",
+      "genstrats analyzed: 100%|██████████| 20/20 [00:49<00:00,  2.46s/it]\n",
+      "genstrats analyzed: 100%|██████████| 20/20 [00:48<00:00,  2.44s/it]\n",
+      "genstrats analyzed: 100%|██████████| 20/20 [00:48<00:00,  2.43s/it]\n",
+      "genstrats analyzed: 100%|██████████| 20/20 [00:48<00:00,  2.42s/it]\n",
+      "genstrats analyzed: 100%|██████████| 20/20 [00:49<00:00,  2.46s/it]\n",
+      "genstrats analyzed: 100%|██████████| 20/20 [00:48<00:00,  2.44s/it]\n",
+      "spendstrats analyzed: 100%|██████████| 9/9 [07:20<00:00, 49.00s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate all combinations of parameters\n",
+    "spendstrat_combinations = list(itertools.product(\n",
+    "    spendstrat_params[\"base_spending\"],\n",
+    "    spendstrat_params[\"retirement_saving\"],\n",
+    "    spendstrat_params[\"disp_spend\"],\n",
+    "    spendstrat_params[\"disp_give\"],\n",
+    "))\n",
+    "\n",
+    "genstrat_combinations = list(itertools.product(\n",
+    "    genstrat_params[\"straight_percent\"],\n",
+    "    genstrat_params[\"investment_draw_down_rate\"],\n",
+    "    genstrat_params[\"legacy_give_percent\"],\n",
+    "))\n",
+    "\n",
+    "for spendstrat_tuple in spendstrat_combinations:\n",
+    "    for genstrat_tuple in tqdm(genstrat_combinations, \"genstrats analyzed\"):\n",
+    "        bs, rs, ds, dg = spendstrat_tuple\n",
+    "        sp, iddr, lgp = genstrat_tuple\n",
+    "        salary = Salary(112000)\n",
+    "        spendstrat = SpendingStrategy(\n",
+    "            base_spending=bs,\n",
+    "            retirement_saving=rs,\n",
+    "            disp_spend=ds,\n",
+    "            disp_give=dg\n",
+    "        )\n",
+    "        genstrat = GenerosityStrategy(\n",
+    "            straight_percent=sp,\n",
+    "            investment_draw_down_rate=iddr,\n",
+    "            legacy_give_percent=lgp\n",
+    "        )\n",
+    "        pm = PortfolioManager(\n",
+    "            person_age=28,\n",
+    "            spendstrat=spendstrat,\n",
+    "            genstrat=genstrat,\n",
+    "            salary=salary,\n",
+    "        )\n",
+    "        pm.init_retirement_savings(9450+2241+27705) # 12/23/23\n",
+    "        pm.init_giving_savings(4150)# 12/23/23\n",
+    "\n",
+    "        for i in range(12 * (80-28)):\n",
+    "            years_from_start = (i+1) / 12\n",
+    "            pm.simulate_month(years_from_start)\n",
+    "\n",
+    "        total_giving = (\n",
+    "            pm.df[\"Total Giving\"].sum() \n",
+    "            + pm.ia.reverse_adjust(pm.giving_investment.total, years_from_start)\n",
+    "            + pm.ia.reverse_adjust(pm.retirement_investment.total * pm.genstrat.legacy_give_percent, years_from_start)\n",
+    "            )\n",
+    "        new_row = {\n",
+    "            \"base_spending\": bs,\n",
+    "            \"retirement_saving\": rs,\n",
+    "            \"disp_spend\": ds,\n",
+    "            \"disp_give\": dg,\n",
+    "            \"straight_percent\": sp,\n",
+    "            \"investment_draw_down_rate\": iddr,\n",
+    "            \"legacy_give_percent\": lgp,\n",
+    "            \"total_giving\": total_giving\n",
+    "        }\n",
+    "        if len(analysis_df) == 0:\n",
+    "            analysis_df = pd.DataFrame([new_row])\n",
+    "        else:\n",
+    "            analysis_df = pd.concat([analysis_df, pd.DataFrame([new_row])], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -168,69 +246,136 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Salary</th>\n",
-       "      <th>Total Income</th>\n",
-       "      <th>Retirement Savings</th>\n",
-       "      <th>Giving Savings</th>\n",
-       "      <th>Asset Savings</th>\n",
-       "      <th>years_from_start</th>\n",
-       "      <th>Total Giving</th>\n",
+       "      <th>base_spending</th>\n",
+       "      <th>retirement_saving</th>\n",
+       "      <th>disp_spend</th>\n",
+       "      <th>disp_give</th>\n",
+       "      <th>straight_percent</th>\n",
+       "      <th>investment_draw_down_rate</th>\n",
+       "      <th>legacy_give_percent</th>\n",
+       "      <th>total_giving</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>100000.0</td>\n",
-       "      <td>100000.00</td>\n",
-       "      <td>39396.00</td>\n",
-       "      <td>4150.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <th>40</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>2714707.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>100000.0</td>\n",
-       "      <td>103503.96</td>\n",
-       "      <td>57722.11</td>\n",
-       "      <td>6032.72</td>\n",
-       "      <td>25153.04</td>\n",
-       "      <td>0.92</td>\n",
-       "      <td>1793.15</td>\n",
+       "      <th>100</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>2475232.66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>105000.0</td>\n",
-       "      <td>82254.00</td>\n",
-       "      <td>78582.39</td>\n",
-       "      <td>8099.11</td>\n",
-       "      <td>54046.77</td>\n",
-       "      <td>1.92</td>\n",
-       "      <td>3741.95</td>\n",
+       "      <th>44</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>2432881.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>2379311.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>2294876.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>2234369.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>2184304.42</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Salary  Total Income  Retirement Savings  Giving Savings  Asset Savings  \\\n",
-       "0  100000.0     100000.00            39396.00         4150.00           0.00   \n",
-       "1  100000.0     103503.96            57722.11         6032.72       25153.04   \n",
-       "2  105000.0      82254.00            78582.39         8099.11       54046.77   \n",
+       "     base_spending  retirement_saving  disp_spend  disp_give  \\\n",
+       "40             0.5               0.10         0.1        0.5   \n",
+       "100            0.5               0.15         0.1        0.5   \n",
+       "44             0.5               0.10         0.1        0.5   \n",
+       "41             0.5               0.10         0.1        0.5   \n",
+       "20             0.5               0.10         0.1        0.4   \n",
+       "104            0.5               0.15         0.1        0.5   \n",
+       "101            0.5               0.15         0.1        0.5   \n",
        "\n",
-       "   years_from_start  Total Giving  \n",
-       "0              0.00          0.00  \n",
-       "1              0.92       1793.15  \n",
-       "2              1.92       3741.95  "
+       "     straight_percent  investment_draw_down_rate  legacy_give_percent  \\\n",
+       "40                0.1                       0.01                  0.2   \n",
+       "100               0.1                       0.01                  0.2   \n",
+       "44                0.3                       0.01                  0.2   \n",
+       "41                0.1                       0.03                  0.2   \n",
+       "20                0.1                       0.01                  0.2   \n",
+       "104               0.3                       0.01                  0.2   \n",
+       "101               0.1                       0.03                  0.2   \n",
+       "\n",
+       "     total_giving  \n",
+       "40     2714707.47  \n",
+       "100    2475232.66  \n",
+       "44     2432881.76  \n",
+       "41     2379311.05  \n",
+       "20     2294876.73  \n",
+       "104    2234369.28  \n",
+       "101    2184304.42  "
       ]
      },
-     "execution_count": 107,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "pm.df"
+    "eval_df = analysis_df.copy()\n",
+    "eval_df = eval_df.sort_values(by=\"total_giving\", ascending=False)\n",
+    "eval_df = eval_df.round(2)\n",
+    "display(eval_df.head(7))"
    ]
   },
   {
@@ -257,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
